--- a/Kubernetes/Kubernetes-manifest/ingress-uat-knowhow.yaml
+++ b/Kubernetes/Kubernetes-manifest/ingress-uat-knowhow.yaml
@@ -4,11 +4,11 @@ metadata:
   annotations:
     appgw.ingress.kubernetes.io/appgw-ssl-certificate: wildcard-tools-publicos-sapient-com
     kubectl.kubernetes.io/last-applied-configuration: |
-      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"appgw.ingress.kubernetes.io/appgw-ssl-certificate":"wildcard-tools-publicos-sapient-com"},"name":"map-ui","namespace":"uat-map"},"spec":{"ingressClassName":"azure-application-gateway","rules":[{"host":"uat-retrospective.tools.publicis.sapient.com","http":{"paths":[{"backend":{"service":{"name":"map-ui","port":{"number":80}}},"path":"/","pathType":"Exact"}]}}]}}
+      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"appgw.ingress.kubernetes.io/appgw-ssl-certificate":"wildcard-tools-publicos-sapient-com"},"name":"map-ui","namespace":"stage-map"},"spec":{"ingressClassName":"azure-application-gateway","rules":[{"host":"stage-retrospective.tools.publicis.sapient.com","http":{"paths":[{"backend":{"service":{"name":"map-ui","port":{"number":80}}},"path":"/","pathType":"Exact"}]}}]}}
   creationTimestamp: "2023-12-14T14:10:48Z"
   generation: 7
   name: knowhow-ui
-  namespace: uat-knowhow
+  namespace: stage-knowhow
   resourceVersion: "8784047"
   uid: ac29626d-a7c1-4b9c-b1c2-3f832b450a7b
 spec:
