--- a/Kubernetes/Kubernetes-manifest/kafka.yaml
+++ b/Kubernetes/Kubernetes-manifest/kafka.yaml
@@ -3,7 +3,7 @@ kind: StatefulSet
 #kind: Deployment
 metadata:
   name: crs-kafka
-  namespace: uat-knowhow
+  namespace: stage-knowhow
 spec:
   replicas: 3
   serviceName: kafka-cluster
@@ -41,7 +41,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: kafka-cluster
-  namespace: uat-knowhow
+  namespace: stage-knowhow
 spec:
   selector:
     app: kafka-cluster
