--- a/Kubernetes/Kubernetes-manifest/ui.yaml
+++ b/Kubernetes/Kubernetes-manifest/ui.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: knowhow-ui
-  namespace: uat-knowhow
+  namespace: stage-knowhow
   labels:
     app: knowhow-ui
 spec:
@@ -72,7 +72,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: knowhow-ui
-  namespace: uat-knowhow
+  namespace: stage-knowhow
 spec:
   selector:
     app: knowhow-ui
