--- a/Kubernetes/Kubernetes-manifest/zookeeper.yaml
+++ b/Kubernetes/Kubernetes-manifest/zookeeper.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: crs-zookeeper
-  namespace: uat-knowhow
+  namespace: stage-knowhow
 spec:
   replicas: 3
   serviceName: zookeeper-cluster
@@ -46,7 +46,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: zookeeper-cluster
-  namespace: uat-knowhow
+  namespace: stage-knowhow
 spec:
   selector:
     app: zookeeper-cluster
