--- a/Kubernetes/Kubernetes-manifest/customapi.yaml
+++ b/Kubernetes/Kubernetes-manifest/customapi.yaml
@@ -7,7 +7,7 @@ metadata:
   labels:
     app: customapi
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: customapi
@@ -29,10 +29,10 @@ spec:
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
-          resources:
-            requests:
-              memory: "1Gi"
-              cpu: "0.5"
+          # resources:
+          #   requests:
+          #     memory: "1Gi"
+          #     cpu: "0.5"
           # readinessProbe:
           #   tcpSocket:
           #     port: 8080
@@ -90,25 +90,16 @@ spec:
                   name: auth-resourceapikeys
                   key: auth-resourceapikeys
             - name: mongock.migration-scan-package
-              value: com.publicissapient.kpidashboard.apis.mongock.upgrade
+              value: "com.publicissapient.kpidashboard.apis.mongock.upgrade"
             - name: mongock.start-system-version
-              value: 8.1.0
+              value: "8.0.0"
             - name: mongock.end-system-version
-              value: 9.0.0
-            - name: auth.centralAuthBaseURL
-              value: "https://stage-authnauth.tools.publicis.sapient.com"
-            - name:  notification.switch
-              value: "true"
-            - name:  auth.subDomainCookie
-              value: "true"
-            - name:  auth.domain
-              value: tools.publicis.sapient.com
-
+              value: "9.0.0"
           envFrom:
           - configMapRef:
               name: knowhow-config  
           volumeMounts:
-            - name: knowhow-secrets-store
+            - name: knowhow-secrets-store 
               mountPath: "/mnt/stage-secrets-store"
               readOnly: true
       volumes:
