--- a/Kubernetes/Kubernetes-manifest/devops.yaml
+++ b/Kubernetes/Kubernetes-manifest/devops.yaml
@@ -63,10 +63,10 @@ spec:
         envFrom:
         - configMapRef:
             name: knowhow-config
-        resources:
-          requests:
-            memory: "3Gi"
-            cpu: "1"
+        # resources:
+        #   requests:
+        #     memory: "3Gi"
+        #     cpu: "1"
         ports:
         - containerPort: 50001
         - containerPort: 50002
