--- a/Kubernetes/Kubernetes-manifest/kafka.yaml
+++ b/Kubernetes/Kubernetes-manifest/kafka.yaml
@@ -5,7 +5,7 @@ metadata:
   name: crs-kafka
   namespace: stage-knowhow
 spec:
-  replicas: 3
+  replicas: 1
   serviceName: kafka-cluster
   selector:
     matchLabels:
@@ -23,10 +23,10 @@ spec:
 #        image: bitnami/kafka:latest
         securityContext:
           runAsUser: 0
-        resources:
-          requests:
-            memory: "1G"
-            cpu: "1"
+        # resources:
+        #   requests:
+        #     memory: "1G"
+        #     cpu: "1"
         ports:
          - containerPort: 9092
         env:
