--- a/UI/nginx/files/nginx-dev.conf
+++ b/UI/nginx/files/nginx-dev.conf
@@ -31,9 +31,9 @@ server
 
     ssl on;
     ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_certificate         /etc/ssl/certs/knowhow.cer;
-    ssl_certificate_key                 /etc/ssl/certs/knowhow.key;
-
+    ssl_certificate         /etc/ssl/certs/knowhow_ssl.cer;
+    ssl_certificate_key     /etc/ssl/certs/knowhow_ssl.key;
+    ssl_password_file       /etc/nginx/certs/knowhow_ssl_passphrase.txt;
     #add_header 'Access-Control-Allow-Origin' '*';
 
     #add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS, PATCH';
