--- a/Kubernetes/Kubernetes-manifest/configmap.yaml
+++ b/Kubernetes/Kubernetes-manifest/configmap.yaml
@@ -12,12 +12,12 @@ data:
   flag.mailWithoutKafka: "false"
   notification.switch: "true"
   sendGridEnabled: "false"
-  spring.kafka.consumer.bootstrap-servers: crs-kafka-0.kafka-cluster.stage-knowhow.svc.cluster.local:9092
-  spring.kafka.producer.bootstrap-servers: crs-kafka-0.kafka-cluster.stage-knowhow.svc.cluster.local:9092
+  spring.kafka.consumer.bootstrap-servers: kafka.kafka-cluster.stage-knowhow.svc.cluster.local:9092
+  spring.kafka.producer.bootstrap-servers: kafka.kafka-cluster.stage-knowhow.svc.cluster.local:9092
   KAFKA_CFG_ZOOKEEPER_CONNECT: >-
-    crs-zookeeper-0.zookeeper-cluster.stage-knowhow.svc.cluster.local:2181
+    zookeeper.zookeeper-cluster.stage-knowhow.svc.cluster.local:2181
   ZOO_SERVERS: >-
-    crs-zookeeper-0.zookeeper-cluster.stage-knowhow.svc.cluster.local:2888:3888
+    zookeeper.zookeeper-cluster.stage-knowhow.svc.cluster.local:2888:3888
 
   # customapi Config
   auth.centralAuthBaseURL: "https://stage-authnauth.tools.publicis.sapient.com"
