--- a/Kubernetes/Kubernetes-manifest/kafka.yaml
+++ b/Kubernetes/Kubernetes-manifest/kafka.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 #kind: Deployment
 metadata:
-  name: crs-kafka
+  name: kafka
   namespace: stage-knowhow
 spec:
   replicas: 1
