--- a/Kubernetes/Kubernetes-manifest/zookeeper.yaml
+++ b/Kubernetes/Kubernetes-manifest/zookeeper.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: crs-zookeeper
+  name: zookeeper
   namespace: stage-knowhow
 spec:
   replicas: 1
