--- a/processors/argocd/pom.xml
+++ b/processors/argocd/pom.xml
@@ -23,19 +23,19 @@
 	<description>ArgoCD Processor</description>
 	<packaging>jar</packaging>
 	<artifactId>argocd-processor</artifactId>
-	<version>8.3.1-SNAPSHOT</version>
+	<version>10.0.0-SNAPSHOT</version>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.3</version>
+		<version>3.2.0</version>
 		<relativePath />
 	</parent>
 
 	<properties>
-		<java.version>1.8</java.version>
+		<java.version>17</java.version>
 		<final.name>argocd-processor</final.name>
-		<logback-encoder-custom.version>5.2</logback-encoder-custom.version>
+		<logback-encoder-custom.version>7.4</logback-encoder-custom.version>
 	</properties>
 
 	<build>
@@ -118,6 +118,12 @@
 		<dependency>
 		    <groupId>com.fasterxml.jackson.core</groupId>
 		    <artifactId>jackson-databind</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<scope>test</scope>
 		</dependency>
 		
 	</dependencies>
