--- a/Kubernetes/knowhow-helm/debbie-config/values.yaml
+++ b/Kubernetes/knowhow-helm/debbie-config/values.yaml
@@ -4,11 +4,11 @@
 
 replicaCount: 1
 
-namespace: uat-knowhow
+namespace: stage-knowhow
 
-env: uat
+env: stage
 
-secretname: uat-debbie-secrets
+secretname: stage-debbie-secrets
 
 imagePullSecrets: []
 nameOverride: ""
