--- a/Kubernetes/knowhow-helm/debbie-knowhow/templates/deployment.yaml
+++ b/Kubernetes/knowhow-helm/debbie-knowhow/templates/deployment.yaml
@@ -40,18 +40,18 @@ spec:
               protocol: TCP
           envFrom:
           - configMapRef:
-              name: {{ .Values.configmapname }}
+              name: {{ .Values.env}}-debbie-config
           env:
             - name: POSTGRES_USER
               valueFrom:
                 secretKeyRef:
-                  name: {{ .Values.env }}debbieuser
-                  key: {{ .Values.env }}debbieuser
+                  name: {{ .Values.env }}-debbieuser
+                  key: {{ .Values.env }}-debbieuser
             - name: POSTGRES_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: {{.Values.env}}debbiepassword
-                  key: {{.Values.env}}debbiepassword
+                  name: {{.Values.env}}-debbiepassword
+                  key: {{.Values.env}}-debbiepassword
             - name: SECRET_KEY
               valueFrom:
                 secretKeyRef:
@@ -60,8 +60,8 @@ spec:
             - name: RABBITMQ_DEFAULT_PASS
               valueFrom:
                 secretKeyRef:
-                  name: {{ .Values.env }}rabbitpass
-                  key: {{ .Values.env }}rabbitpass
+                  name: {{ .Values.env }}-rabbitpass
+                  key: {{ .Values.env }}-rabbitpass
             - name: EMAIL_HOST_PASSWORD
               valueFrom:
                 secretKeyRef:
@@ -87,6 +87,11 @@ spec:
                 secretKeyRef:
                   name: {{ .Values.env}}-debbie-internal-key
                   key: {{ .Values.env}}-debbie-internal-key
+            - name: SCAN_STATUS_APIS_TOKEN
+              valueFrom:
+                secretKeyRef:
+                  name: scan-status-apis-token-debbie
+                  key: scan-status-apis-token-debbie
             - name: GIT_PROCESS_ONLY_ONE_COMMIT
               value: "false"
             - name: GIT_WITHOUT_MODIFICATIONS
@@ -94,16 +99,16 @@ spec:
             - name: GITLAB_URL
               value: "https://gitlab.tremend.com"
           volumeMounts:
-            - name: knowhow-secrets-store
+            - name: debbie-secrets-store
               mountPath: "/mnt/{{ .Values.env}}-debbie-secrets-store"
               readOnly: true
       volumes:
-        - name: knowhow-secrets-store
+        - name: debbie-secrets-store
           csi:
             driver: secrets-store.csi.k8s.io
             readOnly: true
             volumeAttributes:
-              secretProviderClass: "{{ .Values.env}}-debbie-secretproviderclass"
+              secretProviderClass: "{{ .Values.env}}-secretproviderclass"
 
           # - secretRef:
           #     name: {{ .Values.secretname }}
