--- a/Kubernetes/Kubernetes-manifest/configmap.yaml
+++ b/Kubernetes/Kubernetes-manifest/configmap.yaml
@@ -12,7 +12,8 @@ data:
   sendGridEnabled: "false"
 
   # customapi Config
-  auth.centralAuthBaseURL: "https://stage-authnauth.tools.publicis.sapient.com"
+  #auth.centralAuthBaseURL: "https://stage-authnauth.tools.publicis.sapient.com"
+  auth.centralAuthBaseURL: "http://authnauth-ui.stage-auth.svc.cluster.local:80"
   auth.subDomainCookie: "true"
   auth.domain: "tools.publicis.sapient.com"
   forgotPassword.uiHost: "stage-psknowhow.tools.publicis.sapient.com"
