Update values.yaml of knowhow debbie image name
Signed-off-by: rapkalya <74697698+rapkalya@users.noreply.github.com>

--- a/Kubernetes/knowhow-helm/debbie-knowhow/values.yaml
+++ b/Kubernetes/knowhow-helm/debbie-knowhow/values.yaml
@@ -7,7 +7,7 @@ replicaCount: 1
 env: stage
 
 image:
-  repository: speedtools.azurecr.io/debbie-knowhow
+  repository: speedtools.azurecr.io/knowhow-repotool
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
