adding cron for sonar

--- a/Kubernetes/Kubernetes-manifest/devops.yaml
+++ b/Kubernetes/Kubernetes-manifest/devops.yaml
@@ -60,6 +60,9 @@ spec:
                   key: stage-knhdbpassword
             - name: mongock.migration-scan-package
               value: com.publicissapient.kpidashboard.apis.mongock.installation
+            # Adding cron expressions
+            - name: sonarprocessor.cron
+              value: "0 */15 * * * *"
         envFrom:
         - configMapRef:
             name: knowhow-config
